Make column format optional, JSON is default.
- For mime-types 2.6, columnar support is opt-in and will not be changed to
  default until mime-types 3.0. Restore JSON by default with
  mime/types/columnar for enabling it.

- Rename from .txt to .column; fix some of the type errors in conversion caused
  by previously undetected bad data.

- Keep the PATH protocol even though none of the Linux distributions are using
  it now.

- Fix up the conversion method and benchmarking.

--- a/test/fixture/yaml.yaml
+++ b/test/fixture/yaml.yaml
@@ -6,8 +6,7 @@
   - smi
   - smil
   obsolete: true
-  use-instead:
-  - application/smil+xml
+  use-instead: application/smil+xml
   references:
   - IANA
   - RFC4536
@@ -18,8 +17,7 @@
   extensions:
   - qcp
   obsolete: true
-  use-instead:
-  - audio/QCELP
+  use-instead: audio/QCELP
   references:
   - IANA
   - RFC3625
@@ -30,8 +28,7 @@
   extensions:
   - bmp
   obsolete: true
-  use-instead:
-  - image/x-bmp
+  use-instead: image/x-bmp
   registered: false
 - !ruby/object:MIME::Type
   content-type: application/acad
