--- a/type-lists/audio.yaml
+++ b/type-lists/audio.yaml
@@ -103,9 +103,9 @@
   - RFC4867
   - "{audio/AMR-WB=http://www.iana.org/assignments/media-types/audio/AMR-WB}"
   xrefs: !ruby/hash:MIME::Types::Container
-    rfc: &1
+    rfc:
     - rfc4867
-    template: &2
+    template:
     - audio/AMR-WB
   registered: true
 - !ruby/object:MIME::Type
