--- a/type-lists/application.yaml
+++ b/type-lists/application.yaml
@@ -1156,8 +1156,6 @@
     - W3C
     uri:
     - http://www.w3.org/TR/2007/CR-emma-20071211/#media-type-registration
-    text:
-    - 
   registered: true
 - !ruby/object:MIME::Type
   content-type: application/emotionml+xml
@@ -1336,8 +1334,6 @@
   xrefs: !ruby/hash:MIME::Types::Container
     person:
     - Levantovsky
-    text:
-    - 
     template:
     - application/font-sfnt
   registered: true
@@ -1781,11 +1777,11 @@
   encoding: base64
   references:
   - IANA
-  - DRAFT:draft-ietf-jose-json-web-signature-41
+  - RFC7515
   - "{application/jose=http://www.iana.org/assignments/media-types/application/jose}"
   xrefs: !ruby/hash:MIME::Types::Container
-    draft:
-    - RFC-ietf-jose-json-web-signature-41
+    rfc:
+    - rfc7515
     template:
     - application/jose
   registered: true
@@ -1794,11 +1790,11 @@
   encoding: base64
   references:
   - IANA
-  - DRAFT:draft-ietf-jose-json-web-signature-41
+  - RFC7515
   - "{application/jose+json=http://www.iana.org/assignments/media-types/application/jose+json}"
   xrefs: !ruby/hash:MIME::Types::Container
-    draft:
-    - RFC-ietf-jose-json-web-signature-41
+    rfc:
+    - rfc7515
     template:
     - application/jose+json
   registered: true
@@ -1869,11 +1865,11 @@
   encoding: base64
   references:
   - IANA
-  - DRAFT:draft-ietf-jose-json-web-key-41
+  - RFC7517
   - "{application/jwk+json=http://www.iana.org/assignments/media-types/application/jwk+json}"
   xrefs: !ruby/hash:MIME::Types::Container
-    draft:
-    - RFC-ietf-jose-json-web-key-41
+    rfc:
+    - rfc7517
     template:
     - application/jwk+json
   registered: true
@@ -1882,11 +1878,11 @@
   encoding: base64
   references:
   - IANA
-  - DRAFT:draft-ietf-jose-json-web-key-41
+  - RFC7517
   - "{application/jwk-set+json=http://www.iana.org/assignments/media-types/application/jwk-set+json}"
   xrefs: !ruby/hash:MIME::Types::Container
-    draft:
-    - RFC-ietf-jose-json-web-key-41
+    rfc:
+    - rfc7517
     template:
     - application/jwk-set+json
   registered: true
@@ -1895,11 +1891,11 @@
   encoding: base64
   references:
   - IANA
-  - DRAFT:draft-ietf-oauth-json-web-token-32
+  - RFC7519
   - "{application/jwt=http://www.iana.org/assignments/media-types/application/jwt}"
   xrefs: !ruby/hash:MIME::Types::Container
-    draft:
-    - RFC-ietf-oauth-json-web-token-32
+    rfc:
+    - rfc7519
     template:
     - application/jwt
   registered: true
@@ -4676,8 +4672,6 @@
   xrefs: !ruby/hash:MIME::Types::Container
     person:
     - Gottfried_Zimmermann
-    text:
-    - 
     template:
     - application/urc-grpsheet+xml
   registered: true
@@ -4691,8 +4685,6 @@
   xrefs: !ruby/hash:MIME::Types::Container
     person:
     - Gottfried_Zimmermann
-    text:
-    - 
     template:
     - application/urc-ressheet+xml
   registered: true
@@ -4706,8 +4698,6 @@
   xrefs: !ruby/hash:MIME::Types::Container
     person:
     - Gottfried_Zimmermann
-    text:
-    - 
     template:
     - application/urc-targetdesc+xml
   registered: true
@@ -5486,6 +5476,19 @@
     - Giacomo_Guilizzoni
     template:
     - application/vnd.balsamiq.bmml+xml
+  registered: true
+- !ruby/object:MIME::Type
+  content-type: application/vnd.balsamiq.bmpr
+  encoding: base64
+  references:
+  - IANA
+  - "[Giacomo_Guilizzoni]"
+  - "{application/vnd.balsamiq.bmpr=http://www.iana.org/assignments/media-types/application/vnd.balsamiq.bmpr}"
+  xrefs: !ruby/hash:MIME::Types::Container
+    person:
+    - Giacomo_Guilizzoni
+    template:
+    - application/vnd.balsamiq.bmpr
   registered: true
 - !ruby/object:MIME::Type
   content-type: application/vnd.bekitzur-stech+json
